--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-*{
+{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
 
@@ -10,7 +10,7 @@ body{
 
 main{
     background-color: white;
-    width: 500px;
+    width: 600px;
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.308);
